--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/nlw-united-icon.svg">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name='theme-color' content='#171717'>
-    <title>pass.in</title>
-  </head>
-  <body class='bg-neutral-900 text-stone-300 antialiased'>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/nlw-united-icon.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="theme-color" content="#171717" />
+		<title>pass.in</title>
+
+		<meta name="author" content="Alefer Reinert" />
+		<link rel="author" href="https://aleferreinert.vercel.app" />
+		<meta property="og:title" content="pass.in" />
+		<meta name="description" content="Gestão de participantes em eventos presenciais." />
+		<meta property="og:description" content="Gestão de participantes em eventos presenciais." />
+		<meta property="og:image" content="social-share.webp" />
+		<meta property="og:type" content="website" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="pass.in" />
+		<meta name="twitter:description" content="Gestão de participantes em eventos presenciais." />
+		<meta name="twitter:image" content="social-share.webp" />
+		<meta name="theme-color" content="#0f172a" />
+	</head>
+	<body class="bg-neutral-900 text-stone-300 antialiased">
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+	</body>
 </html>
+
